added all timeblocks

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -30,10 +30,10 @@ textarea{
   border-radius: 15px;
 }
 
-.row {
+.rowStyle {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
