--- a/Develop/style.css
+++ b/Develop/style.css
@@ -31,7 +31,7 @@ textarea{
   border-radius: 15px;
 }
 
-.rowStyle {
+.row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
